Add passwords to env
